[gd_scene load_steps=8 format=3 uid="uid://crev2inf1u6xe"]

[ext_resource type="Script" uid="uid://d2d112h57jnn7" path="res://scripts/main_menu.gd" id="1_fu7sn"]
[ext_resource type="Texture2D" uid="uid://bmui16k70u28k" path="res://assets/misc_sprites/Main Menu Background.png" id="2_8ln24"]
[ext_resource type="Texture2D" uid="uid://dj1qprqp6c0gh" path="res://assets/UI/Buttons/Brown Button.png" id="3_rtw2f"]
[ext_resource type="FontFile" uid="uid://ck6v0ojfued1d" path="res://assets/Fonts/PixelOperatorHB.ttf" id="4_oa1go"]
[ext_resource type="FontFile" uid="uid://brlpjil3sdnqq" path="res://assets/Fonts/pixel_operator/PixelOperator8-Bold.ttf" id="5_tbmy8"]
[ext_resource type="AudioStream" uid="uid://c8wdvch8iqmet" path="res://assets/sound/music/MainMenuMusic.mp3" id="6_rtw2f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("2_8ln24")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = 2.0
offset_right = 78.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -15.0
offset_right = 140.25
offset_bottom = 333.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 34

[node name="Button" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_rtw2f")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_oa1go")
theme_override_font_sizes/font_size = 35
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_rtw2f")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_oa1go")
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_rtw2f")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_oa1go")
theme_override_font_sizes/font_size = 35
text = "Exit Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -671.0
offset_top = -372.0
offset_right = -59.084106
offset_bottom = -237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("5_tbmy8")
theme_override_font_sizes/font_size = 42
text = "Your Problem,
Please"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_rtw2f")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
